--- a/package.json
+++ b/package.json
@@ -1,12 +1,37 @@
 {
-  "name": "code3trakcer",
+  "name": "code3tracker",
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nodejitsu/http-server.git"
+    "url": "https://github.com/benzen/code3tracker.git"
+  },
+  "dependencies": {
+    "coffee-script": "~1.3.3",
+    "express":"3.2.4",
+    "mongoose":"3.6.11"
+  },
   "devDependencies": {
+    "hooker": "0.2.3",
+    "async": "~0.1.22",
+    "lodash": "~0.9.0",
+    "which": "1.0.5",
+    "underscore.string": "~2.3.1",
+    "dateformat": "1.0.2-1.2.3",
+    "eventemitter2": "0.4.11",
+    "glob": "~3.1.21",
+    "minimatch": "0.2.12",
+    "findup-sync": "0.1.2",
+    "js-yaml": "2.0.5",
+    "rimraf": "~2.0.2",
+    "iconv-lite": "0.2.8",
+    "colors": "0.6.0-1",
+    "nopt": "~1.0.10",
+    "grunt-contrib-uglify": "0.2.0",
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-nodeunit": "~0.1.2"
+    "grunt-contrib-nodeunit": "~0.1.2",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-coffee":"0.7.0",
+    "grunt-contrib-nodeunit":"0.1.2"
   }
 }
