--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "coffee-script": "~1.3.3",
     "express":"3.2.4",
-    "mongoose":"3.6.11"
+    "mongoose":"3.6.11",
+    "js-yaml":"2.0.5"
   },
   "devDependencies": {
     "hooker": "0.2.3",
@@ -32,6 +33,7 @@
     "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-coffee":"0.7.0",
-    "grunt-contrib-nodeunit":"0.1.2"
+    "grunt-contrib-nodeunit":"0.1.2",
+    "grunt-contrib-copy":"0.4.1"
   }
 }
